--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>wknd.</title>
 </head>
 <body>
+
+    <script src="validate.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+
     
 </body>
 </html>
