updated nav-bar with working links

--- a/homePage.html
+++ b/homePage.html
@@ -18,8 +18,8 @@
             <nav class="uk-navbar-container uk-navbar-transparent" uk-navbar>
                 <div class="uk-navbar-right uk-light">
                     <ul class="uk-navbar-nav">
-                        <li class="uk-active nav-item"><a href="#">FIND</a></li>
-                        <li class="uk-active nav-item"><a href="#">REGISTER</a></li>
+                        <li class="uk-active nav-item"><a href="search_bar.html">FIND</a></li>
+                        <li class="uk-active nav-item"><a href="register.html">REGISTER</a></li>
                         <li class="uk-active nav-item"><a href="#">@username</a></li>
                     </ul>
                 </div>
