--- a/search_bar.html
+++ b/search_bar.html
@@ -44,7 +44,7 @@
             var query = "&apikey=rjC9JcYGVmI9QLKslEzKTEDnb93gABPp"
             $.ajax({
                 type: "GET",
-                url: queryURL + searchWord + city + query,
+                url: queryURL + searchEvent + city + query,
                 async: true,
                 dataType: "json",
                 success: function (json) {
