changed text in search bar

--- a/search_bar.html
+++ b/search_bar.html
@@ -27,10 +27,18 @@
     <div>
         <form id="searchBar" class="uk-search uk-search-default">
             <!-- <a href="" uk-search-icon></a> -->
-            <input id='searchEvent' type="search" placeholder="Event Type">
+            <input id='searchEvent' type="search" placeholder="Name of Event">
             <input id='searchCity' type="search" placeholder="City">
             <input type="submit" value="submit">
         </form>
+    </div>
+
+    <div>
+        <ul>
+            <li>
+
+            </li>
+        </ul>
     </div>
 
     <!--Search Function-->
