removed classification function

--- a/search_bar.html
+++ b/search_bar.html
@@ -47,15 +47,14 @@
 
         var searchFunction = function (event) {
             event.preventDefault()
-            var queryEventURL = "https://app.ticketmaster.com/discovery/v2/events.json?"
+            var queryURL = "https://app.ticketmaster.com/discovery/v2/events.json?"
             var searchEvent = "keyword=" + document.querySelector('#searchEvent').value
             var searchGenre = "&grenreId=" + document.querySelector('#genreId').value
             var city = "&city=" + document.querySelector('#searchCity').value
             var query = "&apikey=rjC9JcYGVmI9QLKslEzKTEDnb93gABPp"
-            var queryClassificationURL = "https://app.ticketmaster.com/discovery/v2/classifications.json?"
             $.ajax({
                 type: "GET",
-                url: queryEventURL + searchEvent + searchGenre + city + eventQuery,
+                url: queryURL + searchEvent + searchGenre + city + query,
                 async: true,
                 dataType: "json",
                 success: function (json) {
@@ -67,22 +66,10 @@
                 },
                 error: function (xhr, status, err) {
                     // This time, we do not end up here!
-                    $.ajax({
-                        type: "GET",
-                        url: queryClassificationURL + query,
-                        dataType: "json",
-                        success: function (json) {
-                            console.log(json);
-                            // Parse the response.
-                            // Do other things.
-                        },
-                        error: function (xhr, status, err) {
-                            // This time, we do not end up here!
-                        }
-                    });
                 }
             });
         }
+        $('#searchBar').submit(searchFunction)
 
     </script>
 </body>
