--- a/search_bar.html
+++ b/search_bar.html
@@ -21,6 +21,7 @@
 
     <!--Search Bar CSS-->
     <form id="searchBar" class="uk-search uk-search-default">
+        
         <!-- <a href="" uk-search-icon></a> -->
         <input id='searchWord' type="search" placeholder="">
         <input id='searchCity' type="search" placeholder="">
@@ -45,7 +46,17 @@
                     console.log(searchWord)
                     console.log(searchCity)
                     console.log(json);
+
+                    console.log(json._embedded.events[0].name)
+
+                    for(var i = 0; i < json._embedded.event.length; i++)
+                    {
+                        // display each element
+                        $('<p>').text(json._embedded.event[i].name)
+
+                    }
                     // Parse the response.
+                    
                     // Do other things.
                 },
                 error: function (xhr, status, err) {
