added alt name for background image on home page

--- a/homePage.html
+++ b/homePage.html
@@ -13,7 +13,7 @@
 <body>
    
     <div class="uk-position-relative">
-        <img src="unsplash.jpg" alt="">
+        <img src="unsplash.jpg" alt="orange, black, and white background">
         <div class="uk-position-top">
             <nav class="uk-navbar-container uk-navbar-transparent" uk-navbar>
                 <div class="uk-navbar-right uk-light">
