styled Home page and register page

--- a/homePage.html
+++ b/homePage.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/uikit.min.css" />
         <script src="js/uikit.min.js"></script>
         <script src="js/uikit-icons.min.js"></script>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="homePage.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -27,9 +27,10 @@
             <h1 class="home-font" style="font-family: 'Poppins', sans-serif;">
                 WE ARE wknd.
             </h1>
+
+            <a class="uk-button uk-button-default btn uk-position-bottom-center" href="search_bar.html">Find an Event!</a>
         </div>
         
-        <a class="uk-button uk-button-default" href="">button</a>
 
     </div>
     
