updated "Find Event" button

--- a/homePage.html
+++ b/homePage.html
@@ -28,7 +28,7 @@
                 WE ARE wknd.
             </h1>
 
-            <a class="uk-button uk-button-default btn uk-position-bottom-center" href="search_bar.html">Find an Event!</a>
+            <a class="uk-button uk-button-secondary btn uk-position-bottom-center" href="search_bar.html">Find an Event!</a>
         </div>
         
 
