Responsive background image

--- a/homePage.html
+++ b/homePage.html
@@ -13,18 +13,19 @@
 <body>
    
     <div class="uk-position-relative">
-        <img src="unsplash.jpg" alt="orange, black, and white background">
+        <img src="unsplash.jpg" alt="orange, black, and white background" class="uk-background-cover">
         <div class="uk-position-top">
             <nav class="uk-navbar-container uk-navbar-transparent" uk-navbar>
                 <div class="uk-navbar-right uk-light">
                     <ul class="uk-navbar-nav">
+                        <li class="uk-active nav-item uk-align-left"><a href="homePage.html">wknd.</a></li>
                         <li class="uk-active nav-item"><a href="search_bar.html">FIND</a></li>
                         <li class="uk-active nav-item"><a href="register.html">REGISTER</a></li>
                         <li class="uk-active nav-item"><a href="#">@username</a></li>
                     </ul>
                 </div>
             </nav>
-            <h1 class="home-font" style="font-family: 'Poppins', sans-serif;">
+            <h1 class="home-font header" style="font-family: 'Poppins', sans-serif;">
                 WE ARE wknd.
             </h1>
 
