--- a/homePage.html
+++ b/homePage.html
@@ -25,7 +25,7 @@
                     </ul>
                 </div>
             </nav>
-            <h1 class="home-font header" style="font-family: 'Poppins', sans-serif;">
+            <h1 class="home-font header header1" style="font-family: 'Poppins', sans-serif;">
                 WE ARE wknd.
             </h1>
 
