--- a/search_bar.html
+++ b/search_bar.html
@@ -76,9 +76,9 @@
                     // Parse the response.
 
                     console.log(json._embedded.events[0].name)
-                    for (var i = 0; i < 5 /*json._embedded.event.length8*/; i++) {
+                    for (var i = 0; i < json._embedded.events.length; i++) {
                         // display each element
-                        var thisResult = $('<p>').text(json._embedded.event[i].name)
+                        var thisResult = $('<p>').text(json._embedded.events[i].name)
                        // thisResult = $('<p>').text('ThisResult Here')
                         $('#searchResults').append(thisResult)
                     }
