--- a/search_bar.html
+++ b/search_bar.html
@@ -12,6 +12,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.5.9/js/uikit-icons.min.js"
         integrity="sha512-hcz3GoZLfjU/z1OyArGvM1dVgrzpWcU3jnYaC6klc2gdy9HxrFkmoWmcUYbraeS+V/GWSgfv6upr9ff4RVyQPw=="
         crossorigin="anonymous"></script>
+    <style>
+        #header {
+            text-align: center; font-family: monospace;
+        }
+    </style>
 </head>
 
 <body>
@@ -19,7 +24,7 @@
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
         </script>
 
-    <div>
+    <div id="header">
         <h1>Search For An Event In Your Area!</h1>
     </div>
 
@@ -76,7 +81,7 @@
                     // Parse the response.
 
                     console.log(json._embedded.events[0].name)
-                    for (var i = 0; i < json._embedded.events.length; i++) {
+                    for (var i = 0; i < 5 /*json._embedded.event.length8*/; i++) {
                         // display each element
                         var thisResult = $('<p>').text(json._embedded.events[i].name)
                        // thisResult = $('<p>').text('ThisResult Here')
