--- a/search_bar.html
+++ b/search_bar.html
@@ -14,7 +14,8 @@
         crossorigin="anonymous"></script>
     <style>
         #header {
-            text-align: center; font-family: monospace;
+            text-align: center;
+            font-family: monospace;
         }
     </style>
 </head>
@@ -72,22 +73,22 @@
 
                     console.log(json._embedded.events[0].name)
 
-                  /*  for(var i = 0; i < json._embedded.event.length; i++)
-                    {
-                        // display each element
-                        $('<p>').text(json._embedded.event[i].name)
-
-                    } */
+                    /*  for(var i = 0; i < json._embedded.event.length; i++)
+                      {
+                          // display each element
+                          $('<p>').text(json._embedded.event[i].name)
+  
+                      } */
                     // Parse the response.
 
                     console.log(json._embedded.events[0].name)
                     for (var i = 0; i < 5 /*json._embedded.event.length8*/; i++) {
                         // display each element
                         var thisResult = $('<p>').text(json._embedded.events[i].name)
-                       // thisResult = $('<p>').text('ThisResult Here')
+                        // thisResult = $('<p>').text('ThisResult Here')
                         $('#searchResults').append(thisResult)
                     }
-                    
+
                     // Do other things.
                 },
                 error: function (xhr, status, err) {
