username register name
changing the username at the top of the page

--- a/register.html
+++ b/register.html
@@ -20,7 +20,7 @@
                   <ul class="uk-navbar-nav">
                       <li class="uk-active nav-item"><a href="search_bar.html">FIND</a></li>
                       <li class="uk-active nav-item"><a href="register.html">REGISTER</a></li>
-                      <li class="uk-active nav-item"><a href="#">@username</a></li>
+                      <li class="uk-active nav-item"><a id='user' href="#">@username</a></li>
                   </ul>
               </div>
           </nav>
