--- a/register.html
+++ b/register.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css"href="styleReg.css">
-    <link rel="stylesheet" href="register.css">
     <link rel="stylesheet" href="css/uikit.min.css" />
+    <link rel="stylesheet" href="register.css">
         <script src="js/uikit.min.js"></script>
         <script src="js/uikit-icons.min.js"></script>
     <title>Register</title>
@@ -13,7 +13,7 @@
 <body>
 
     <div class="uk-position-relative">
-      <img src="unsplash.jpg" alt="">
+      <img src="unsplash.jpg" alt="" class="uk-background-cover">
       <div class="uk-position-top">
           <nav class="uk-navbar-container uk-navbar-transparent" uk-navbar>
               <div class="uk-navbar-right uk-light">
