adding user id and styling
user id + styles

--- a/homePage.html
+++ b/homePage.html
@@ -21,7 +21,7 @@
                         <li class="uk-active nav-item uk-align-left"><a href="homePage.html">wknd.</a></li>
                         <li class="uk-active nav-item"><a href="search_bar.html">FIND</a></li>
                         <li class="uk-active nav-item"><a href="register.html">REGISTER</a></li>
-                        <li class="uk-active nav-item"><a href="#">@username</a></li>
+                        <li class="uk-active nav-item"><a id='user' href="#">@username</a></li>
                     </ul>
                 </div>
             </nav>
@@ -32,7 +32,6 @@
             <a class="uk-button uk-button-secondary btn uk-position-bottom-center" href="search_bar.html">Find an Event!</a>
         </div>
         
-
     </div>
     
 </body>
