--- a/search_bar.html
+++ b/search_bar.html
@@ -12,6 +12,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.5.9/js/uikit-icons.min.js"
         integrity="sha512-hcz3GoZLfjU/z1OyArGvM1dVgrzpWcU3jnYaC6klc2gdy9HxrFkmoWmcUYbraeS+V/GWSgfv6upr9ff4RVyQPw=="
         crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
+        </script>
     <style>
         #header {
             text-align: center;
@@ -21,10 +24,6 @@
 </head>
 
 <body>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
-        </script>
-
     <div id="header">
         <h1>Search For An Event In Your Area!</h1>
     </div>
@@ -52,56 +51,7 @@
     </div>
 
     <!--Search Function-->
-    <script id="searchEvents" type="text/javascript">
-
-        var searchFunction = function (event) {
-            event.preventDefault()
-            var queryURL = "https://app.ticketmaster.com/discovery/v2/events.json?"
-            var searchEvent = "keyword=" + document.querySelector('#searchEvent').value
-            var searchGenre = "&grenreId=" + document.querySelector('#genreId').value
-            var city = "&city=" + document.querySelector('#searchCity').value
-            var query = "&apikey=rjC9JcYGVmI9QLKslEzKTEDnb93gABPp"
-            $.ajax({
-                type: "GET",
-                url: queryURL + searchEvent + searchGenre + city + query,
-                async: true,
-                dataType: "json",
-                success: function (json) {
-                    console.log(searchEvent)
-                    console.log(searchCity)
-                    console.log(json);
-
-                    console.log(json._embedded.events[0].name)
-
-                    /*  for(var i = 0; i < json._embedded.event.length; i++)
-                      {
-                          // display each element
-                          $('<p>').text(json._embedded.event[i].name)
-  
-                      } */
-                    // Parse the response.
-
-                    console.log(json._embedded.events[0].name)
-                    for (var i = 0; i < 5 /*json._embedded.event.length8*/; i++) {
-                        // display each element
-                        var thisResult = $('<p>').text(json._embedded.events[i].name)
-                        // thisResult = $('<p>').text('ThisResult Here')
-                        $('#searchResults').append(thisResult)
-                    }
-
-                    // Do other things.
-                },
-                error: function (xhr, status, err) {
-                    // This time, we do not end up here!
-
-                }
-            });
-        }
-        $('#searchBar').submit(searchFunction)
-
-
-
-    </script>
+    <script src="./searchBarFunction.js"></script>
 </body>
 
 </html>
