--- a/search_bar.html
+++ b/search_bar.html
@@ -35,13 +35,13 @@
                 </div>
             </nav>
 
-    <div class="header box">
-        <h1>Search For An Event In Your Area!</h1>
+    <div class="header titleBox">
+        <h1 class="title">Search For An Event In Your Area!</h1>
     </div>
 
     <!--Search Bar CSS-->
     <div>
-        <form id="searchBar" class="uk-search uk-search-default">
+        <form id="searchBar" class="uk-search uk-search-default uk-position-bottom-center">
             <!-- <a href="" uk-search-icon></a> -->
             <input id='searchEvent' type="search" placeholder="Name of Event">
             <input id='searchCity' type="search" placeholder="City">
@@ -49,7 +49,7 @@
             <input type="submit" value="submit">
         </form>
 
-        <p>Search Results here</p>
+        <p class="uk-position-bottom-center">Search Results here</p>
         <p id='searchResults'></p>
     </div>
 
