--- a/search_bar.html
+++ b/search_bar.html
@@ -50,7 +50,7 @@
         </form>
 
         <p class="uk-position-bottom-center">Search Results here</p>
-        <p id='searchResults'></p>
+        <p class="uk-position-bottom-center" id='searchResults'></p>
     </div>
 
     <div>
