--- a/register.html
+++ b/register.html
@@ -47,6 +47,9 @@
       
           <input type="submit" value="Submit">
         </form>
+
+        <button id='clearLocal'>Clear Local Storage</button>
+
       </div>
       
 
