--- a/homePage.html
+++ b/homePage.html
@@ -9,7 +9,10 @@
         <script src="js/uikit-icons.min.js"></script>
     <link rel="stylesheet" href="homePage.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
+
+
 <body>
    
     <div class="uk-position-relative">
@@ -33,6 +36,16 @@
         </div>
         
     </div>
+<!-- Load registered user-->
+<script>
+
+    var currentUser = JSON.parse(localStorage.getItem('currentUser'))
+    if(currentUser !== null)
+    {
+        $('#user').text(currentUser.sn)
+    }
+
+</script>
     
 </body>
 </html>
