--- a/register.html
+++ b/register.html
@@ -48,6 +48,7 @@
           <input type="submit" value="Submit">
         </form>
 
+        <!--Button to clear local storage for debugging purposes-->
         <button id='clearLocal'>Clear Local Storage</button>
 
       </div>
@@ -63,7 +64,7 @@
       </div>
 
       <!--Where the results of the mailboxlayer API go-->
-    <h4 style="text-align:center" id='form_results'>Email Results Here</h4>
+    <h3 style="text-align:center; background-color:black; color:white" id='form_results'>Choose a unique username and email</h3>
 
       </div>
 
