--- a/search_bar.html
+++ b/search_bar.html
@@ -51,6 +51,17 @@
 
         <p class="uk-position-bottom-center">Search Results here</p>
         <p class="uk-position-bottom-center" id='searchResults'></p>
+        <div class="mt-4 col-md-12">
+        <div class='card row' id='searchCards'>Search Card Results here</div>
+        </div>
+
+            <!--Start as hidden if have not searched for anything yet-->
+            <!--<h5 id="forecastH5" class="mt-3 hide">5-Day Forecast:</h5> -->
+
+            <!-- Put forecast here -->
+            <!--<div id="forecast" class="row">--> 
+
+
     </div>
 
     <div>
