login and search
login

--- a/homePage.html
+++ b/homePage.html
@@ -24,6 +24,7 @@
                         <li class="uk-active nav-item uk-align-left"><a href="homePage.html">wknd.</a></li>
                         <li class="uk-active nav-item"><a href="search_bar.html">FIND</a></li>
                         <li class="uk-active nav-item"><a href="register.html">REGISTER</a></li>
+                        <li class="uk-active nav-item"><a href="login.html">LOGIN</a></li>
                         <li class="uk-active nav-item"><a id='user' href="#">@username</a></li>
                     </ul>
                 </div>
