--- a/login.html
+++ b/login.html
@@ -3,11 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>wknd.</title>
+    <link rel="stylesheet" href="css/uikit.min.css" />
+        <script src="js/uikit.min.js"></script>
+        <script src="js/uikit-icons.min.js"></script>
+    <link rel="stylesheet" href="homePage.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+</head>
+
+
+<body>
+   
+    <div class="uk-position-relative">
+        <img src="unsplash.jpg" alt="orange, black, and white background" class="uk-background-cover">
+        <div class="uk-position-top">
+            <nav class="uk-navbar-container uk-navbar-transparent" uk-navbar>
+                <div class="uk-navbar-right uk-light">
+                    <ul class="uk-navbar-nav">
+                        <li class="uk-active nav-item uk-align-left"><a href="homePage.html">wknd.</a></li>
+                        <li class="uk-active nav-item"><a href="search_bar.html">FIND</a></li>
+                        <li class="uk-active nav-item"><a href="register.html">REGISTER</a></li>
+                        <!--<li class="uk-active nav-item"><a href="login.html">LOGIN</a></li>-->
+                        <li class="uk-active nav-item"><a id='user' href="#">@username</a></li>
+                    </ul>
+                </div>
+            </nav>
 </head>
 <body>
 
-    
+
     
 </body>
 </html>
