--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css"href="styleReg.css">
     <link rel="stylesheet" href="css/uikit.min.css" />
-    <link rel="stylesheet" href="register.css">
+    <link rel="stylesheet" href="css/register.css">
         <script src="js/uikit.min.js"></script>
         <script src="js/uikit-icons.min.js"></script>
     <title>Register</title>
@@ -69,7 +69,7 @@
       </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="validate.js"></script>
+    <script src="js/validate.js"></script>
     
 </body>
 </html>
