--- a/search_bar.html
+++ b/search_bar.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.9/dist/css/uikit.min.css" />
-    <link rel="stylesheet" href="search_bar.css">
+    <link rel="stylesheet" href="css/search_bar.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.5.9/js/uikit.min.js"
         integrity="sha512-OZ9Sq7ecGckkqgxa8t/415BRNoz2GIInOsu8Qjj99r9IlBCq2XJlm9T9z//D4W1lrl+xCdXzq0EYfMo8DZJ+KA=="
         crossorigin="anonymous"></script>
@@ -87,7 +87,7 @@
 
 </script>
 <!--Search Function-->
-    <script src="./searchBarFunction.js"></script>
+    <script src="js/searchBarFunction.js"></script>
 </body>
 
 </html>
