--- a/homePage.html
+++ b/homePage.html
@@ -40,6 +40,7 @@
 <!-- Load registered user-->
 <script>
 
+    // load the saved User
     var currentUser = JSON.parse(localStorage.getItem('currentUser'))
     if(currentUser !== null)
     {
