--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css"href="styleReg.css">
+    <link rel="stylesheet" type="text/css"href="css/styleReg.css">
     <link rel="stylesheet" href="css/uikit.min.css" />
     <link rel="stylesheet" href="css/register.css">
         <script src="js/uikit.min.js"></script>
@@ -36,6 +36,10 @@
           <!--Email input-->
           <label for='email'>Email</label>
         <input type='text' id='email' name='email' required>
+
+        <!--What city you -->
+        <label for='email'>City</label>
+        <input type='text' id='city' name='city' required>
         
         <!--Username input-->
           <label for="sn">Username</label>
