adding login link to navbar
adding login link to navbar and deleting useless codes / comments

--- a/search_bar.html
+++ b/search_bar.html
@@ -49,18 +49,10 @@
             <input type="submit" value="submit">
         </form>
 
-        <p class="uk-position-bottom-center">Search Results here</p>
-        
-        <div class="mt-4 col-md-12">
-        <div class='card row' id='searchCards'>Search Card Results here</div>
+       <!-- <div class="mt-4 col-md-12"> -->
+        <div class='card' id='searchCards'>Search Card Results here</div>
         <p class="uk-position-bottom-center" id='searchResults'></p>
         </div>
-
-            <!--Start as hidden if have not searched for anything yet-->
-            <!--<h5 id="forecastH5" class="mt-3 hide">5-Day Forecast:</h5> -->
-
-            <!-- Put forecast here -->
-            <!--<div id="forecast" class="row">--> 
 
 
     </div>
