--- a/register.html
+++ b/register.html
@@ -20,6 +20,7 @@
                   <ul class="uk-navbar-nav">
                       <li class="uk-active nav-item"><a href="search_bar.html">FIND</a></li>
                       <li class="uk-active nav-item"><a href="register.html">REGISTER</a></li>
+                      <li class="uk-active nav-item"><a href="login.html">LOGIN</a></li>
                       <li class="uk-active nav-item"><a id='user' href="#">@username</a></li>
                   </ul>
               </div>
