--- a/Profile.html
+++ b/Profile.html
@@ -3,9 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Your Profile</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.9/dist/css/uikit.min.css" />
+    <link rel="stylesheet" href="css/search_bar.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.5.9/js/uikit.min.js"
+        integrity="sha512-OZ9Sq7ecGckkqgxa8t/415BRNoz2GIInOsu8Qjj99r9IlBCq2XJlm9T9z//D4W1lrl+xCdXzq0EYfMo8DZJ+KA=="
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.5.9/js/uikit-icons.min.js"
+        integrity="sha512-hcz3GoZLfjU/z1OyArGvM1dVgrzpWcU3jnYaC6klc2gdy9HxrFkmoWmcUYbraeS+V/GWSgfv6upr9ff4RVyQPw=="
+        crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
+        </script>
+
+
+</head>
 </head>
 <body>
+
+     <!-- NAV BAR -->
+     <div class="uk-position-relative">
+        <img src="unsplash.jpg" alt="orange, black, and white background" class="uk-background-cover">
+        <div class="uk-position-top">
+            <nav class="uk-navbar-container uk-navbar-transparent" uk-navbar>
+                <div class="uk-navbar-right uk-light">
+                    <ul class="uk-navbar-nav">
+                        <li class="uk-active nav-item uk-align-left"><a href="homePage.html">wknd.</a></li>
+                        <li class="uk-active nav-item"><a href="search_bar.html">FIND</a></li>
+                        <li class="uk-active nav-item"><a href="register.html">REGISTER</a></li>
+                        <li class="uk-active nav-item"><a id='user' href="#">@username</a></li>
+                    </ul>
+                </div>
+            </nav>
+
+            <script>
+
+                var currentUser = JSON.parse(localStorage.getItem('currentUser'))
+                if(currentUser !== null)
+                {
+                    $('#user').text(currentUser.sn)
+                }
+            
+            </script>
     
 </body>
 </html>
