removed text in search page

--- a/search_bar.html
+++ b/search_bar.html
@@ -50,7 +50,7 @@
         </form>
 
        <!-- <div class="mt-4 col-md-12"> -->
-        <div class='card' id='searchCards'>Search Card Results here</div>
+        <div class='card' id='searchCards'></div>
         <p class="uk-position-bottom-center" id='searchResults'></p>
         </div>
 
