--- a/search_bar.html
+++ b/search_bar.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.9/dist/css/uikit.min.css" />
     <link rel="stylesheet" href="css/search_bar.css">
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.5.9/js/uikit.min.js"
         integrity="sha512-OZ9Sq7ecGckkqgxa8t/415BRNoz2GIInOsu8Qjj99r9IlBCq2XJlm9T9z//D4W1lrl+xCdXzq0EYfMo8DZJ+KA=="
         crossorigin="anonymous"></script>
@@ -49,9 +50,10 @@
             <input type="submit" value="submit">
         </form>
 
-       <!-- <div class="mt-4 col-md-12"> -->
-        <div class='card' id='searchCards'>Search Card Results here</div>
-        <p class="uk-position-bottom-center" id='searchResults'></p>
+        
+       <!--<div class="mt-4 col-md-12"> -->
+        <div class='card' id='searchCards'></div>
+      <p class="uk-position-bottom-center" id='searchResults'></p>
         </div>
 
 
