added beginning of about us page

--- a/about.html
+++ b/about.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
 </head>
+
 <body>
-    
+    <h1>A Little Bit About Us</h1>
+
+    <div id="aboutWknd">
+        <p>Wknd. was founded with the single purpose of offering everyone the opportunity to seize their weekend.
+            Whether it's a concert, or at an art gallery, Wknd. wants you to enjoy your time.
+        </p>
+    </div>
+
+    <div id="aboutHector">
+        <p>
+            Hector Garcia is an 18 year old college student working on getting his AA in Journalism and also working to complete the UC Davis coding bootcamp.
+            He lives in Fair Oaks, California and likes to read comic books, play video games, and listen to music.
+            Hector aspires to one day own his own buisness.
+        </p>
+    </div>
 </body>
+
 </html>
