updated Nav-Bar with drop down

--- a/register.html
+++ b/register.html
@@ -15,16 +15,23 @@
     <div class="uk-position-relative">
       <img src="unsplash.jpg" alt="" class="uk-background-cover">
       <div class="uk-position-top">
-          <nav class="uk-navbar-container uk-navbar-transparent" uk-navbar>
-              <div class="uk-navbar-right uk-light">
-                  <ul class="uk-navbar-nav">
-                      <li class="uk-active nav-item"><a href="search_bar.html">FIND</a></li>
-                      <li class="uk-active nav-item"><a href="register.html">REGISTER</a></li>
-                      <li class="uk-active nav-item"><a href="login.html">LOGIN</a></li>
-                      <li class="uk-active nav-item"><a id='user' href="#">@username</a></li>
-                  </ul>
-              </div>
-          </nav>
+        <nav class="uk-navbar-container uk-navbar-transparent" uk-navbar>
+          <div class="uk-navbar-right uk-light">
+              <ul class="uk-navbar-nav">
+                  <li class="uk-active nav-item">
+                      <a href="homePage.html">wknd.</a>
+                      <div class="uk-navbar-dropdown">
+                          <ul class="uk-nav uk-navbar-dropdown-nav">
+                              <li class="uk-active nav-item"><a href="register.html">REGISTER</a></li>
+                              <li class="uk-active nav-item"><a href="login.html">LOGIN</a></li>
+                          </ul>
+                      </div>
+                  </li>
+                  <li class="uk-active nav-item"><a href="search_bar.html">FIND</a></li>
+                  <li class="uk-active nav-item"><a id='user' href="#">@username</a></li>
+              </ul>
+          </div>
+      </nav>
           <!--Heading for Register form (feel free to change the styling on all of this as this is like default w3schools styles-->
     <div class="titleBox">
     <h2 style="text-align:center" class="title">Register for wknd</h2>
