removed search genre

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <h1>A Little Bit About Us</h1>
 
     <div id="aboutWknd">
-        <p>Wknd. was founded with the single purpose of offering everyone the opportunity to seize their weekend.
+        <p>Wknd. was founded with the single purpose of offering ev5eryone the opportunity to seize their weekend.
             Whether it's a concert, or at an art gallery, Wknd. wants you to enjoy your time.
         </p>
     </div>
