--- a/search_bar.html
+++ b/search_bar.html
@@ -50,19 +50,18 @@
             <input type="submit" value="submit">
         </form>
 
-        
-       <!--<div class="mt-4 col-md-12"> -->
-        <div class='card' id='searchCards'></div>
+        <div class="uk-grid-column-small uk-grid-row-large uk-child-width-1-4@s uk-text-center" id='searchCards' uk-grid>
+            <div>
+   
+                <!--</div> -->
+    </div>
       <p class="uk-position-bottom-center" id='searchResults'></p>
         </div>
-
-
     </div>
 
 
     </div>
 
-    
     <!-- Load registered user-->
 <script>
 
