added about tab

--- a/search_bar.html
+++ b/search_bar.html
@@ -38,6 +38,7 @@
                             </div>
                         </li>
                         <li class="uk-active nav-item"><a href="search_bar.html">FIND</a></li>
+                        <li class="uk-active nav-item"><a href="about.html">ABOUT</a></li>
                         <li class="uk-active nav-item"><a id='user' href="#">@username</a></li>
                     </ul>
                 </div>
