--- a/search_bar.html
+++ b/search_bar.html
@@ -49,14 +49,14 @@
 
     <!--Search Bar CSS-->
     <div>
-        <form id="searchBar" class="uk-search uk-search-default uk-position-bottom-center search">
+        <form id="searchBar" class="uk-search uk-search-default uk-position-bottom-center">
            
             <input id='searchEvent' type="search" placeholder="Name of Event">
             <input id='searchCity' type="search" placeholder="City">
             <input type="submit" value="submit">
         </form>
 
-        <div class="uk-grid-column-small uk-grid-row-large uk-child-width-1-4@s uk-text-center" id='searchCards' uk-grid>
+        <div class="uk-grid-column-small uk-grid-row-small uk-card-small uk-child-width-1-4@s uk-text-center" id='searchCards' uk-grid>
             <div>
    
     </div>
@@ -74,6 +74,7 @@
     if(currentUser !== null)
     {
         $('#user').text(currentUser.sn)
+
     }
 
 </script>
