--- a/search_bar.html
+++ b/search_bar.html
@@ -39,7 +39,7 @@
                         </li>
                         <li class="uk-active nav-item"><a href="search_bar.html">FIND</a></li>
                         <li class="uk-active nav-item"><a href="about.html">ABOUT</a></li>
-                        <li class="uk-active nav-item"><a id='user' href="#">@username</a></li>
+                        <li class="uk-active nav-item"><a id='user' href="profile.html">@username</a></li>
                     </ul>
                 </div>
             </nav>
