--- a/register.html
+++ b/register.html
@@ -29,7 +29,7 @@
                   </li>
                   <li class="uk-active nav-item"><a href="search_bar.html">FIND</a></li>
                   <li class="uk-active nav-item"><a href="about.html">ABOUT</a></li>
-                  <li class="uk-active nav-item"><a id='user' href="#">@username</a></li>
+                  <li class="uk-active nav-item"><a id='user' href="Profile.html">@username</a></li>
               </ul>
           </div>
       </nav>
