--- a/search_bar.html
+++ b/search_bar.html
@@ -58,11 +58,12 @@
                 <option value="Music">Music</option>
                 <option value='Comedy'>Comedy</option>
                 <option value="Miscellaneous">Misc</option>
+                <option value=''>All</option>
               </select>
             <input id='searchState' type='search' placeholder='State (2 letter code)'>
             <input id='searchCity' type="search" placeholder="City">
-            <input id='startDate' type='date' placeholder='Start Date'>
-            <input id='endDate' type='date' placeholder='End Date'>
+         <!--   <input id='startDate' type='date' placeholder='Start Date'> -->
+         <!--   <input id='endDate' type='date' placeholder='End Date'> -->
             <input type="submit" value="Submit">
         </form>
 
