--- a/register.html
+++ b/register.html
@@ -47,8 +47,11 @@
         <input type='text' id='email' name='email' required>
 
         <!--What city you -->
-        <label for='email'>City</label>
+        <label for='City'>City</label>
         <input type='text' id='city' name='city' required>
+
+        <label for='State'>State</label>
+        <input type='text' id='state' name='state' required>
         
         <!--Username input-->
           <label for="sn">Username</label>
