--- a/search_bar.html
+++ b/search_bar.html
@@ -25,21 +25,21 @@
     <div class="uk-position-top">
         <img src="unsplash.jpg" alt="orange, black, and white background" class="uk-background uk-light">
         <div class="uk-position-top">
-            <nav class="uk-navbar-container uk-navbar-transparent" uk-navbar>
-                <div class="uk-navbar-right uk-light">
+            <nav class="uk-navbar-container uk-navbar-transparent uk-nav-primary" uk-navbar>
+                <div class="uk-navbar-right">
                     <ul class="uk-navbar-nav">
                         <li class="uk-active nav-item">
-                            <a href="homePage.html">wknd.</a>
+                            <h4></h4><a href="homePage.html">wknd.</a></h4>
                             <div class="uk-navbar-dropdown">
                                 <ul class="uk-nav uk-navbar-dropdown-nav">
-                                    <li class="uk-active nav-item"><a href="register.html">REGISTER</a></li>
+                                   <li class="uk-active nav-item"><a href="register.html">REGISTER</a></li>
                                     <li class="uk-active nav-item"><a href="login.html">LOGIN</a></li>
                                 </ul>
                             </div>
                         </li>
-                        <li class="uk-active nav-item"><a href="search_bar.html">FIND</a></li>
-                        <li class="uk-active nav-item"><a href="about.html">ABOUT</a></li>
-                        <li class="uk-active nav-item"><a id='user' href="profile.html">@username</a></li>
+                        <h4> <li class="uk-active nav-item"><a href="search_bar.html">FIND</a></li> </h4>
+                        <h4> <li class="uk-active nav-item"><a href="about.html">ABOUT</a></li><h4></h4>
+                        <h4><li class="uk-active nav-item"><a id='user' href="profile.html">@username</a></li></h4>
                     </ul>
                 </div>
             </nav>
@@ -95,7 +95,7 @@
         console.log(currentUser.city)
 
         // show default city on search page
-     //   showHomeResults(currentUser.city)
+        showHomeResults(currentUser.city)
 
     }
 
