added state to profile
state to profile data

--- a/search_bar.html
+++ b/search_bar.html
@@ -26,10 +26,10 @@
         <img src="unsplash.jpg" alt="orange, black, and white background" class="uk-background uk-light">
         <div class="uk-position-top">
             <nav class="uk-navbar-container uk-navbar-transparent uk-nav-primary" uk-navbar>
-                <div class="uk-navbar-right">
+                <div class="uk-navbar-right uk-light">
                     <ul class="uk-navbar-nav">
                         <li class="uk-active nav-item">
-                            <h4></h4><a href="homePage.html">wknd.</a></h4>
+                            <a href="homePage.html">wknd.</a>
                             <div class="uk-navbar-dropdown">
                                 <ul class="uk-nav uk-navbar-dropdown-nav">
                                    <li class="uk-active nav-item"><a href="register.html">REGISTER</a></li>
@@ -37,9 +37,9 @@
                                 </ul>
                             </div>
                         </li>
-                        <h4> <li class="uk-active nav-item"><a href="search_bar.html">FIND</a></li> </h4>
-                        <h4> <li class="uk-active nav-item"><a href="about.html">ABOUT</a></li><h4></h4>
-                        <h4><li class="uk-active nav-item"><a id='user' href="profile.html">@username</a></li></h4>
+                        <li class="uk-active nav-item"><a href="search_bar.html">FIND</a></li> 
+                         <li class="uk-active nav-item"><a href="about.html">ABOUT</a></li>
+                        <li class="uk-active nav-item"><a id='user' href="profile.html">@username</a></li>
                     </ul>
                 </div>
             </nav>
