register validation fixed
added smtp_check to boolean flag

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
                 <div id='aboutCard' class='uk-card-secondary'>
                 <div class='uk-card-title'>About Us</h1>
                 <div class='uk-card-body'>                
-    <div style='color:red; vertical-align:center' id="aboutWknd">
+    <div style='color:white; vertical-align:center' id="aboutWknd">
         <p>Wknd. was founded with the single purpose of offering everyone the opportunity to seize their weekend.
             Whether it's a concert, or at an art gallery, Wknd. wants you to enjoy your time.
         </p>
